k8s_config/calico-config/network-policies/team-1-vpn-network-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ippool-test
spec:
  selector: all()
  types:
  - Ingress
  - Egress


---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-vpn-to-ippool-test
  namespace: ippool-test
spec:
  selector: all()
  ingress:
  - action: Allow
    source:
      nets:
        - 172.35.1.0/27   # Reserved IP range for ippool-test VPN users
  egress:
  - action: Allow
    destination:
      selector: all()
  types:
  - Ingress
  - Egress
