k8s_config/calico-config/network-policies/team-3-vpn-network-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: team-3
spec:
  selector: all()
  types:
  - Ingress
  - Egress


---

apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-vpn-to-team-3
  namespace: team-3
spec:
  selector: all()
  ingress:
  - action: Allow
    source:
      nets:
        - 172.35.3.0/27   # Reserved IP range for team-3 VPN users
  egress:
  - action: Allow
    destination:
      selector: all()
  types:
  - Ingress
  - Egress
